main update on the scrips

--- a/refind.conf
+++ b/refind.conf
@@ -73,7 +73,7 @@ use_nvram false
 #
 #hideui singleuser
 #hideui all
-hideui singleuser,hints,arrows,label,badges
+hideui singleuser,hints,arrows,badges
 
 # Set the name of a subdirectory in which icons are stored. Icons must
 # have the same names they have in the standard directory. The directory
@@ -219,7 +219,7 @@ enable_touch
 # is mutually exclusive with the enable_touch feature. If both
 # are uncommented, the one read most recently takes precedence.
 #
-enable_mouse
+#enable_mouse
 
 # Size of the mouse pointer, in pixels, per side.
 # Default is 16
@@ -744,7 +744,7 @@ menuentry "SteamOS_EFI" {
 	disabled
 }
 
-menuentry "Windows" {
+menuentry "Windows 11 Pro" {
 	icon /EFI/refind/icons/os_win11.png
 	loader /EFI/Microsoft/Boot/bootmgfw.efi
 	graphics on
